<resources>
    <string name="app_name">AgroVista</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="welcome">Selamat Datang Kembali!</string>
    <string name="silakan">Silakan masuk ke akun Anda untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ingat_saya">Ingat saya</string>
    <string name="lupa_kata_sandi">Lupa kata sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="informasi_akun">Informasi Akun</string>
    <string name="konfirmasi">Konfirmasi Kata Sandi</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="umur">Umur</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="asal">Asal</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="masuk_sekarang">Masuk Sekarang</string>
    <string name="akun">Akun</string>
    <string name="ulasan">Ulasan</string>
    <string name="scan_qr">Scan QR</string>
    <string name="beranda">Beranda</string>
    <string name="gambar_utama">Gambar Utama</string>
    <string name="kata_sambutan">Jelajahi Keindahan\nDesa Wisata Leuwi Malang</string>
    <string name="beri_ulasan">Beri Ulasan</string>
    <string name="agroturisme">Agrowisata</string>
    <string name="ulasan_terbaru">Ulasan Terbaru</string>
    <string name="reward">Dapatkan Rewards untuk Ulasanmu! 🌟</string>
    <string name="angka">Angka</string>
    <string name="produk">Produk</string>
    <string name="jenis_wisata">Jenis Wisata</string>
    <string name="diamon">💎</string>
    <string name="dapatkan_hingga_50_poin">Dapatkan hingga 50 Poin</string>
    <string name="untuk_setiap_ulasan_berkualitas">Untuk setiap ulasan berkualitas</string>
    <string name="target">🎯</string>
    <string name="kumpulkan_poin">Kumpulkan Poin</string>
    <string name="semakin_banyak_ulasan_semakin_banyak_poin">Semakin banyak ulasan, semakin banyak poin!</string>
    <string name="hadiah">🛍️</string>
    <string name="tukar_hadiah">Tukar Hadiah</string>
    <string name="tukarkan_poin_dengan_produk_menarik">Tukarkan poin dengan produk menarik</string>
    <string name="beri_ulasan_emot">Beri Ulasan! ✍️</string>
    <string name="nama_opsional">Nama (Opsional) 👤</string>
    <string name="jenis_kelamin_ulasan">Jenis Kelamin ♀️♂️</string>
    <string name="umur_ulasan">Umur 📅</string>
    <string name="asal_ulasan">Asal 🌍</string>
    <string name="job">Pekerjaan 💼</string>
    <string name="agro">Jenis Agrotourism 🌾</string>
    <string name="bagikan_pengalaman_anda">Bagikan pengalaman Anda… ✏️</string>
    <string name="kirim_ulasan">Kirim Ulasan</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="total_poin_anda">Total Poin Anda</string>
    <string name="bintang">Bintang</string>
    <string name="pria">Pria</string>
    <string name="daerah">Daerah</string>
    <string name="role">Role</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="nama_user">Nama User</string>
    <string name="foto_wisata">Foto Wisata</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="deskripsi">Deskripsi</string>
    <string-array name="gender_options">
        <item>Laki-Laki</item>
        <item>Perempuan</item>
    </string-array>
    <string name="laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="masuk_sebagai_tamu">Masuk sebagai Tamu</string>
    <string name="lainnya">Unknown</string>
    <string name="kirim_tamu">Kirim Ulasan sebagai Tamu!</string>
    <string name="tamu">Tamu</string>
    <string name="back_to_login">Back to Login</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="report">Report</string>
    <string name="jaga_desa">🌍 Bantu Jaga Keindahan Desa Wisata!</string>
    <string name="pesan_report">Laporkan pencemaran, vandalism, atau tindakan merusak lingkungan lainnya di Desa Wisata Leuwimalang. Jadilah bagian dari perubahan positif! 💚</string>
    <string name="login_sekarang">Login Sekarang ➜</string>
    <string name="pohon">🌳</string>
    <string name="lindungi_alam_kita">Lindungi Alam Kita</string>
    <string name="pesan2_report">Laporkan setiap tindakan yang mengancam keindahan alam Desa Wisata Leuwimalang.</string>
    <string name="pesan3_report">Laporkan Masalah! 🚨</string>
    <string name="judul_laporan">Judul Laporan 📝</string>
    <string name="desc_report">Deskripsi 🖋️</string>
    <string name="gallery">Gallery 🖼️</string>
    <string name="camera">Camera 📷</string>
    <string name="kirim_laporan">Kirim Laporan</string>
    <string name="pesan_ulasan">🎁 Dapatkan Poin untuk Setiap Ulasan!</string>
    <string name="pesan2_ulasan">Login untuk mengumpulkan poin dan tukarkan dengan hadiah menarik 🎉</string>
    <string name="camera_permission_required">Camera permission is required to use the camera</string>
    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="insert_image_first">Please insert an image first</string>
    <string name="invalid_image">Invalid image</string>
    <string name="failed_to_capture_image">Failed to capture image</string>

</resources>